--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <!-- Last Updated Design Area-->
           Last Updated: Wednesday, January 6, 2016
         </p>
-        <p>&copy; 2022 Company, Inc.</p>
+        <p>&copy; El pelon</p>
       </footer>
 
     </div> <!-- /container -->
